--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-standard-tool</artifactId>
-        <version>2.7.0-build04</version>
+        <version>2.7.0-build05-SNAPSHOT</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -24,8 +24,8 @@
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <sakai.common.version>1.0.0-beta01</sakai.common.version>
         <sakai.edu-services.version>1.0.0-beta01</sakai.edu-services.version>
-        <sakai.jsf.version>2.7.0-M1</sakai.jsf.version>
-        <sakai.search.version>1.2.0-rc01</sakai.search.version>
+        <sakai.jsf.version>2.8-SNAPSHOT</sakai.jsf.version>
+        <sakai.search.version>1.2.0-rc03</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
