--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -56,8 +56,10 @@
       <artifactId>entitybroker-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.sakaiproject.edu-services.gradebook</groupId>
-      <artifactId>gradebook-service-api</artifactId>
+        <groupId>org.sakaiproject.edu-services.gradebook</groupId>
+        <artifactId>gradebook-service-api</artifactId>
+        <version>${sakai.edu-services.version}</version>
+        <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
