--- a/messageforums-help/pom.xml
+++ b/messageforums-help/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <artifactId>msgcntr</artifactId>
-    <version>2.7.0-b02-SNAPSHOT</version>
+    <version>2.7.0-b02</version>
   </parent>
   <name>Sakai Message Center Help</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
