--- a/pom.xml
+++ b/pom.xml
@@ -133,21 +133,25 @@
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-privacy-api</artifactId>
                 <version>${sakai.common.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-type-api</artifactId>
                 <version>${sakai.common.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-manager-api</artifactId>
                 <version>${sakai.common.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.search</groupId>
                 <artifactId>search-api</artifactId>
                 <version>${sakai.search.version}</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
