--- a/messageforums-api/pom.xml
+++ b/messageforums-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>msgcntr</artifactId>
 		<groupId>org.sakaiproject.msgcntr</groupId>
-		<version>2.7.0-b03-SNAPSHOT</version>
+		<version>2.7.0-b03</version>
 	</parent>
 	<name>Sakai Message Forums API</name>
 	<groupId>org.sakaiproject.msgcntr</groupId>
