--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.edu-services.gradebook</groupId>
 			<artifactId>gradebook-service-api</artifactId>
-            <version>${sakai.edu-services.version}</version>
+            <version>[1.0.0,1.1.0)</version>
             <scope>provided</scope>
 		</dependency>
 		<dependency>
