--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-standard-tool</artifactId>
-        <version>2.7.0-build04</version>
+        <version>2.7.1</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -22,10 +22,6 @@
     </modules>
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
-        <sakai.common.version>1.0.0-beta01</sakai.common.version>
-        <sakai.edu-services.version>1.0.0-beta01</sakai.edu-services.version>
-        <sakai.jsf.version>2.7.0-M1</sakai.jsf.version>
-        <sakai.search.version>1.2.0-rc01</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</connection>
@@ -126,31 +122,31 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>${sakai.jsf.version}</version>
+                <version>[2.7.0,2.8.0)</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-privacy-api</artifactId>
-                <version>${sakai.common.version}</version>
+                <version>[1.0.0,1.1.0)</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-type-api</artifactId>
-                <version>${sakai.common.version}</version>
+                <version>[1.0.0,1.1.0)</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-manager-api</artifactId>
-                <version>${sakai.common.version}</version>
+                <version>[1.0.0,1.1.0)</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.search</groupId>
                 <artifactId>search-api</artifactId>
-                <version>${sakai.search.version}</version>
+                <version>[1.2.0,1.3.0)</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
