--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,6 @@
     </modules>
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
-        <sakai.common.version>1.0.0-beta01</sakai.common.version>
-        <sakai.edu-services.version>1.0.0-beta01</sakai.edu-services.version>
-        <sakai.jsf.version>2.8-SNAPSHOT</sakai.jsf.version>
-        <sakai.search.version>1.2.0-rc03</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
@@ -126,31 +122,31 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>${sakai.jsf.version}</version>
+                <version>2.8-SNAPSHOT</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-privacy-api</artifactId>
-                <version>${sakai.common.version}</version>
+                <version>1.1-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-type-api</artifactId>
-                <version>${sakai.common.version}</version>
+                <version>1.1-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-manager-api</artifactId>
-                <version>${sakai.common.version}</version>
+                <version>1.1-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.search</groupId>
                 <artifactId>search-api</artifactId>
-                <version>${sakai.search.version}</version>
+                <version>1.3.0-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
