--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <scm>
-      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/msgcntr/trunk</url>
+      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</developerConnection>
+    <url>https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</url>
   </scm>
     <distributionManagement>
         <downloadUrl>http://source.sakaiproject.org/maven2/
