--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
-    <version>2.8-SNAPSHOT</version>
+    <version>2.9-SNAPSHOT</version>
     <artifactId>msgcntr</artifactId>
     <packaging>pom</packaging>
     <modules>
@@ -25,9 +25,9 @@
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <scm>
-      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</developerConnection>
-    <url>https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</url>
+      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</developerConnection>
+    <url>https://source.sakaiproject.org/svn/msgcntr/trunk</url>
   </scm>
     <distributionManagement>
         <downloadUrl>http://source.sakaiproject.org/maven2/
